added quiz timer and checked radio button

--- a/index.html
+++ b/index.html
@@ -15,18 +15,17 @@
             <button id="start-button">Start</button>
         </div>
         <div id= "question-container"  class="question-container-hide">
-            <div class = "timer">
-
+            <div id="time-display" class = "timer">
             </div>
             <div id="question">Question</div>
             <div id="answer-buttons">
                 <input type="radio" id="answer1" value="1" name="answers">
                 <label id="for-answer1" for="answer1">answer 1</label><br>
-                <input type="radio" id="answer2" text="2" name="answers">
+                <input type="radio" id="answer2" value="2" name="answers">
                 <label id="for-answer2" for="answer2">answer 2</label><br>
-                <input type="radio" id="answer3" text="3" name="answers">
+                <input type="radio" id="answer3" value="3" name="answers">
                 <label id="for-answer3" for="answer3">answer 3</label><br>
-                <input type="radio" id="answer4" text="4" name="answers">
+                <input type="radio" id="answer4" value="4" name="answers">
                 <label id="for-answer4" for="answer4">answer 4</label><br>
             </div>
             <div class="controls">
