made some changes in html and javascript

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         </div>
         <div id= "question-container"  class="question-container-hide">
             <div id="time-display" class = "timer">
+                <div id="score">Score :</div>
+                <div id = "timer">Time :</div>
             </div>
             <div id="question">Question</div>
             <div id="answer-buttons">
