--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Simple javaScript Quiz App</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<header>
-    <h1> JavaScript Quiz App</h1>
-</header>
 <body>
     <div class = "container">
+        <div>
+            <h1> JavaScript Quiz App</h1>
+        </div>
         <div id="user">
             <div id="username">
                 <label for="initials">Enter your name:</label>
@@ -38,7 +38,7 @@
                 <button id="next-btn" class="next-btn">Next</button>
            </div>
         </div>
-
+        <div id = "result" ></div>
     </div>
     <script src="assets/js/data.js"></script>
     <script src="assets/js/script.js"></script>
